# jobpilot-ai

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: errors.py  health.py  request_logging.py
backend/app/core/: __init__.py  config.py  logging.py
docs/: ai-provider-abstraction.md  architecture.md  ats-plugin-architecture.md  coding-standards.md  database-design.md  deployment-strategy.md  domain-model.md  folder-structure.md  module-boundaries.md  pipeline-design.md  roadmap.md  testing-strategy.md
